[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Pieces/X/X.gd" type="Script" id=1]
[ext_resource path="res://Components/PieceComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/X.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 174, 174 )

[node name="X" type="Area2D"]
z_index = 3
script = ExtResource( 1 )
piece_type = "X"
normal_color = Color( 1, 1, 1, 1 )
hover_color = Color( 1, 0, 1, 1 )
highlight_color = Color( 1, 0, 1, 1 )
hover_and_highlight_color = Color( 1, 0, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="PieceComponent" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
